# volume-render

./: .gitignore  README.md  medcvr.md  vr.md
nninteractive-proxy/: README.md  nninteractive_proxy.py  nninteractive_proxy_smoke.mjs  pyproject.toml  requirements-build.txt  requirements.txt
nninteractive-proxy/scripts/: build-exe.ps1  ensure-venv.ps1  run.ps1
web-renderer/: .gitignore  index.html  mpr.html  package-lock.json  package.json  pbr.html  tsconfig.json  vite.config.ts
web-renderer/docs/: architecture.md  nii-webgpu-mvp.md  nninteractive_proxy.md
web-renderer/docs/architecture/: 01-overview.md  02-scene.md  03-viewport.md  04-renderer.md  05-services-core.md  06-interaction.md  index.md
web-renderer/docs/deprecated/: nii-webgpu-mvp.md
web-renderer/docs/issue/: index.md  nninteractive-start-session-oom.md
web-renderer/docs/todo/: index.md  nninteractive-fact-divergence.md
web-renderer/docs/v0.00/: 01-overview.md  index.md
web-renderer/docs/v0.01/: 01-overview.md  02-scene.md  03-viewport.md  04-renderer.md  05-services-core.md  06-interaction.md  index.md
web-renderer/docs/v0.02/: 01-reference-notes.md  02-goals.md  03-architecture.md  04-input-and-selection.md  05-tool-response-and-commands.md  06-segmentation-tools.md  07-implementation-plan.md  08-current-implementation.md  index.md
web-renderer/docs/v0.03/: 01-summary.md  02-extension-runtime.md  03-nninteractive.md  04-experience-improvements.md  index.md  (+1 more)
web-renderer/src/: engine.ts  main.ts  mpr.ts  mpr.tsx  pbr.ts  scene.ts  segmentation.ts  style.css  viewport.ts  volume.ts
(+47 files in other folders)
